main/default/objects/Country__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Country Code</description>
    <inlineHelpText>Country Code</inlineHelpText>
    <label>Country Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>