main/default/objects/Country__c/fields/Country_ID__c.field-meta.xml
<CustomField>
    <fullName>Country_ID__c</fullName>
    <description>Country ID</description>
    <displayFormat>{0000}</displayFormat>
    <inlineHelpText>Country ID</inlineHelpText>
    <label>Country ID</label>
    <type>AutoNumber</type>
</CustomField>