main/default/objects/Country__c/fields/Country_Status__c.field-meta.xml
<CustomField>
    <fullName>Country_Status__c</fullName>
    <description>Country Status</description>
    <inlineHelpText>Country Status</inlineHelpText>
    <label>Country Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>