main/default/objects/Country__c/fields/Default_PSTL_Code__c.field-meta.xml
<CustomField>
    <fullName>Default_PSTL_Code__c</fullName>
    <description>Default Postal Code</description>
    <inlineHelpText>Default Postal Code</inlineHelpText>
    <label>Default PSTL Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>