main/default/objects/Country__c/fields/FS_Country__c.field-meta.xml
<CustomField>
    <fullName>FS_Country__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FS Country</description>
    <inlineHelpText>FS Country</inlineHelpText>
    <label>FS Country</label>
    <type>Checkbox</type>
</CustomField>