main/default/objects/Country__c/fields/PrdGrp10__c.field-meta.xml
<CustomField>
    <fullName>PrdGrp10__c</fullName>
    <description>Product Group 10 Count</description>
    <inlineHelpText>Product Group 10 Count</inlineHelpText>
    <label>PrdGrp10</label>
    <summarizedField>CountryScoreCard__c.PrdGrp10__c</summarizedField>
    <summaryForeignKey>CountryScoreCard__c.Country__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>