main/default/objects/Country__c/fields/PrdGrp1__c.field-meta.xml
<CustomField>
    <fullName>PrdGrp1__c</fullName>
    <description>Product Group 1 Count</description>
    <inlineHelpText>Product Group 1 Count</inlineHelpText>
    <label>PrdGrp1</label>
    <summarizedField>CountryScoreCard__c.PrdGrp1__c</summarizedField>
    <summaryForeignKey>CountryScoreCard__c.Country__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>