main/default/objects/Country__c/fields/Product_Group_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_1__c</fullName>
    <description>Product Group 1</description>
    <inlineHelpText>Product Group 1</inlineHelpText>
    <label>Product Group 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>