main/default/objects/Country__c/fields/Product_Group_4__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_4__c</fullName>
    <description>Product Group 4</description>
    <inlineHelpText>Product Group 4</inlineHelpText>
    <label>Product Group 4</label>
    <length>40</length>
    <type>Text</type>
</CustomField>